--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,10 @@ body {
     flex-grow: 1;
 }
 
+.main-content p{
+    display: inline;
+}
+
 .main-content input {
     border: 1px solid #cccccc;
     padding: 8px;
@@ -49,10 +53,7 @@ header a {
     text-decoration: none;
 }
 
-
-    
-
-
 #about-image {
     width: 250px;
+    margin-top: 20px;
 }
