--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,17 +10,20 @@
     <div class="main-content">
         {{>header}}
 
-        <p>Use this site to get your weather!</p>
+        <p id="subtitle">Use this site to get your weather!</p>
 
         <form id="weather_form">
             <input placeholder="Location">
             <button>Search</button>
         </form>
 
-        <p id="weather_forecast"></p>
+        <p id="weather_location"></p>
+        <p id="weather_temp"></p>
+        <p id="weather_feelslike"></p>
+        <p id="weather_desc"></p>
+        <p id="weather_precipitation"></p>
+        <p id="weather_windspeed"></p>
     </div>
-
-
 
     {{>footer}}
 
